2005-02-02  Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-key-manager.glade: Patch from Adam Schreiber
	which fixes problems with toolbar.
	
2005-01-29  Nate Nielsen <nielsen@memberwebs.com>

	* pixmaps/seahorse-key.png:
	* pixmaps/seahorse-secret.png: Added support files for Adam's patch.
	* src/seahorse-key-manager-store.c: 
	* libseahorse/seahorse-key-store.c: Some changes to Adam's patch. No icons
	in recipient selection. No icons for UIDs.
	
2005-01-29	Adam Schreiber <sadam@clemson.edu>
	
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-key-store.c: 
	* pixmaps/Makefile.am: Added Key and Keypair icons to the column view.  
	Sorting on keypair is remembered after close. (bug# 111176)
	
2005-01-22	Adam Schreiber <sadam@clemson.edu>

	* src/seahorse-key-manager.glade: Added bindings for the delete and 
	backspace keys (bug# 164960)
	
2005-01-22  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-key-store.c:
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-recipients.c:
	* libseahorse/seahorse-recipients-store.c:
	* src/seahorse-key-manager-store.c: Better handling of UID rows in the key 
	manager and recipients dialog. (bug# 159669)
	
2005-01-06  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-recipients.c: 
	* src/seahorse-process-multiple.c: Added i18n pluralization fixes (bug #155594, #155214)
	
2004-12-23  Nate Nielsen <nielsen@memberwebs.com>

	* src/Makefile.am
	* src/seahorse-pgp-encrypted.desktop.in:
	* src/seahorse-pgp-signature.desktop.in: Adam Schreiber added decryption 
	operations as defaults for application/pgp-encrypted and 
	appliaction/pgp-signature (bug #160975)
	
2004-12-14  Nate Nielsen <nielsen@memberwebs.com>

 	* agent/gtk-secure-entry.c:
 	* agent/seahorse-agent.c:
 	* agent/seahorse-agent-secmem.c:
 	* agent/seahorse-agent-status.c: Cleaned up compile warnings in agent
 	* src/seahorse-key-manager.c: