@@ -1,3 +1,8 @@
+2005-02-03  Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-util.c: Now prompts for alternate 
+	files in the right directory (bug #164962)
+	
 2005-02-02  Nate Nielsen <nielsen@memberwebs.com>
 
 	* src/seahorse-key-manager.glade: Patch from Adam Schreiber
